--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -30,3 +30,11 @@ textarea {
     margin-left: auto;
     color: gray;
 }
+
+.form-control:focus {
+    color: #495057;
+    background-color: #fff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: none !important;
+}
