--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{% block title %}Mail{% endblock %}</title>
+        <title>{% block title %}MailBox{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'mail/styles.css' %}">   
         <link rel="shortcut icon" href="https://th.bing.com/th/id/OIP._ykI3mFbOPvzmWENGoQXBgHaHN?w=192&h=188&c=7&r=0&o=5&pid=1.7" type="image/x-icon">     
@@ -11,7 +11,7 @@
         {% endblock %}
     </head>
     <body>
-        <div class="container">
+        <div class="container pt-5">
             {% block body %}
             {% endblock %}
         </div>
