Make the page responsive

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -4,11 +4,11 @@
 {% block body %}
 <div class="text-center sticky-top">
     <h2>{{ request.user.email }}</h2>
-    <button class="btn btn-sm btn-outline-primary m-2" id="inbox">Inbox</button>
-    <button class="btn btn-sm btn-outline-primary m-2" id="compose">Compose</button>
-    <button class="btn btn-sm btn-outline-primary m-2" id="sent">Sent</button>
-    <button class="btn btn-sm btn-outline-primary m-2" id="archived">Archived</button>
-    <a class="btn btn-sm btn-outline-primary m-2" href="{% url 'logout' %}">Log Out</a>
+    <button class="btn btn-sm btn-outline-primary m-md-2 my-1" id="inbox">Inbox</button>
+    <button class="btn btn-sm btn-outline-primary m-md-2 my-1" id="compose">Compose</button>
+    <button class="btn btn-sm btn-outline-primary m-md-2 my-1" id="sent">Sent</button>
+    <button class="btn btn-sm btn-outline-primary m-md-2 my-1" id="archived">Archived</button>
+    <a class="btn btn-sm btn-outline-primary m-md-2 my-1" href="{% url 'logout' %}">Log Out</a>
     <hr>
 </div>
 
