--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block body %}
-<div class="text-center sticky-top">
+<div class="text-center">
     <h2>{{ request.user.email }}</h2>
     <button class="btn btn-sm btn-outline-primary m-md-2 my-1" id="inbox">Inbox</button>
     <button class="btn btn-sm btn-outline-primary m-md-2 my-1" id="compose">Compose</button>
@@ -25,19 +25,24 @@
     <div id="compose-view">
         <h3>New Email</h3>
         <form id="compose-form">
-            <div class="form-group">
-                From: <input disabled class="form-control" value="{{ request.user.email }}">
+            <div class="mb-2">
+                <label for="from" class="form-label">From:</label>
+                <input disabled class="form-control" value="{{ request.user.email }}" id="from">
             </div>
-            <div class="form-group">
-                To: <input id="compose-recipients" class="form-control">
+            <div class="mb-2">
+                <label for="compose-recipients" class="form-label">To:</label>
+                <input id="compose-recipients" class="form-control">
             </div>
-            <div class="form-group">
+            <div class="mb-2">
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
-            <textarea class="form-control" id="compose-body" placeholder="Body" required></textarea>
-            <input type="submit" class="btn btn-sm btn-outline-primary"/>
+            <div class="mb-2">
+                <textarea class="form-control" id="compose-body" placeholder="Body" required rows="5"></textarea>
+            </div>
+            <button type="submit" class="btn btn-sm btn-outline-primary">Send</button>
         </form>
     </div>
+    
 {% endblock %}
 
 {% block script %}
