--- a/mail/templates/mail/register.html
+++ b/mail/templates/mail/register.html
@@ -2,26 +2,39 @@
 
 {% block body %}
 
-    <h2>Register</h2>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-4">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h2 class="card-title text-center">Register</h2>
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+                    {% if message %}
+                        <div class="alert alert-warning">{{ message }}</div>
+                    {% endif %}
 
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Register">
-    </form>
+                    <form action="{% url 'register' %}" method="post">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email Address</label>
+                            <input class="form-control" type="email" name="email" id="email" placeholder="Email Address">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input class="form-control" type="password" name="password" id="password" placeholder="Password">
+                        </div>
+                        <div class="mb-3">
+                            <label for="confirmation" class="form-label">Confirm Password</label>
+                            <input class="form-control" type="password" name="confirmation" id="confirmation" placeholder="Confirm Password">
+                        </div>
+                        <button class="btn btn-primary" type="submit">Register</button>
+                    </form>
 
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+                    <p class="mt-3">Already have an account? <a href="{% url 'login' %}">Log In here.</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
