--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -13,7 +13,7 @@
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'mail/styles.css' %}">
     <link rel="shortcut icon"
-        href="https://th.bing.com/th/id/OIP._ykI3mFbOPvzmWENGoQXBgHaHN?w=192&h=188&c=7&r=0&o=5&pid=1.7"
+        href="{% static 'mail/mail.png' %}"
         type="image/x-icon">
     {% block script %}
     {% endblock %}
