--- a/mail/templates/mail/register.html
+++ b/mail/templates/mail/register.html
@@ -2,38 +2,35 @@
 
 {% block body %}
 
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-lg-4">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h2 class="card-title text-center">Register</h2>
+<div class="min-h-screen flex justify-center items-center ">
+    <div class="max-w-md w-full rounded-lg m-5 p-5 bg-white">
+        <h2 class="text-2xl font-bold mb-4">Register</h2>
 
-                    {% if message %}
-                        <div class="alert alert-warning">{{ message }}</div>
-                    {% endif %}
+        {% if message %}
+        <div class="bg-yellow-200 text-yellow-800 p-3 mb-4">{{ message }}</div>
+        {% endif %}
 
-                    <form action="{% url 'register' %}" method="post">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email Address</label>
-                            <input class="form-control" type="email" name="email" id="email" placeholder="Email Address">
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Password</label>
-                            <input class="form-control" type="password" name="password" id="password" placeholder="Password">
-                        </div>
-                        <div class="mb-3">
-                            <label for="confirmation" class="form-label">Confirm Password</label>
-                            <input class="form-control" type="password" name="confirmation" id="confirmation" placeholder="Confirm Password">
-                        </div>
-                        <button class="btn btn-primary" type="submit">Register</button>
-                    </form>
-
-                    <p class="mt-3">Already have an account? <a href="{% url 'login' %}">Log In here.</a></p>
-                </div>
+        <form action="{% url 'register' %}" method="post" class="space-y-4">
+            {% csrf_token %}
+            <div>
+                <label for="email" class="block text-sm font-medium text-gray-600">Email Address</label>
+                <input class="mt-1 p-2 w-full border rounded-md accent-indigo-600" type="email" name="email" id="email"
+                    placeholder="Email Address" required>
             </div>
-        </div>
+            <div>
+                <label for="password" class="block text-sm font-medium text-gray-600">Password</label>
+                <input class="mt-1 p-2 w-full border rounded-md" type="password" name="password" id="password"
+                    placeholder="Password" required>
+            </div>
+            <div>
+                <label for="confirmation" class="block text-sm font-medium text-gray-600">Confirm Password</label>
+                <input class="mt-1 p-2 w-full border rounded-md" type="password" name="confirmation" id="confirmation"
+                    placeholder="Confirm Password" required>
+            </div>
+            <button class="bg-gradient-to-r from-indigo-500 to-indigo-800 text-white rounded-md w-full p-2 uppercase tracking-wider font-semibold" type="submit">Register</button>
+        </form>
+
+        <p class="mt-3 text-center">Already have an account? <a href="{% url 'login' %}" class="underline decoration-indigo-600 font-semibold whitespace-nowrap">Log In here.</a></p>
     </div>
 </div>
 
